SEBSERV-886 implementation and some first tests